--- a/pp.html
+++ b/pp.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Page title</title>
+    <link rel="stylesheet" href="as.css">
 </head>
 <body>
-    <button>click me</button>
+    <button class="my">click me</button>
 </body>
 </html>
